[gd_scene load_steps=20 format=2]

[ext_resource path="res://img/bg.png" type="Texture" id=1]
[ext_resource path="res://img/bgBorderBottom.png" type="Texture" id=2]
[ext_resource path="res://img/bgBorderTop.png" type="Texture" id=3]
[ext_resource path="res://img/baloon_green.fw.png" type="Texture" id=4]
[ext_resource path="res://img/baloon_orange.fw.png" type="Texture" id=5]
[ext_resource path="res://img/baloon_blue.fw.png" type="Texture" id=6]
[ext_resource path="res://img/baloon_pop1.fw.png" type="Texture" id=7]
[ext_resource path="res://img/baloon_pop3.fw.png" type="Texture" id=8]
[ext_resource path="res://img/baloon_pop2.fw.png" type="Texture" id=9]
[ext_resource path="res://Comic Gibi Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://PlayerBalloon.gd" type="Script" id=11]
[ext_resource path="res://audio/boom.tres" type="AudioStream" id=12]
[ext_resource path="res://audio/menu.ogg" type="AudioStream" id=13]
[ext_resource path="res://InGame.gd" type="Script" id=14]
[ext_resource path="res://img/music_on.fw.png" type="Texture" id=15]
[ext_resource path="res://img/baloon_red.fw.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=4]
size = 55
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "blue",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "green",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "orange",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "red",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 70
use_filter = true
font_data = ExtResource( 10 )

[node name="InGame" type="Node2D"]
script = ExtResource( 14 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="CenterContainer"]
scale = Vector2( 1.66667, 0.75 )
z_index = -1
texture = ExtResource( 1 )
centered = false

[node name="bgBorderBottom" type="Sprite" parent="CenterContainer"]
position = Vector2( 0, 565 )
scale = Vector2( 1.65975, 0.515451 )
z_index = 1
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_group_": true
}

[node name="bgMusicOnOff" type="Sprite" parent="CenterContainer/bgBorderBottom"]
position = Vector2( 459.74, 35.318 )
scale = Vector2( 0.389153, 1 )
z_index = 2
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="btnMusicOnOff" type="Button" parent="CenterContainer/bgBorderBottom/bgMusicOnOff"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.5
margin_top = -31.0
margin_right = -29.5
margin_bottom = -31.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgBorderTop" type="Sprite" parent="CenterContainer"]
scale = Vector2( 1.65975, 0.666667 )
z_index = 1
texture = ExtResource( 3 )
centered = false

[node name="lblScore" type="Label" parent="CenterContainer/bgBorderTop"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -241.0
margin_top = -36.0
margin_right = 241.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "123"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBalloon" type="AnimatedSprite" parent="."]
position = Vector2( 288, 344 )
frames = SubResource( 3 )
animation = "red"
centered = false
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="PlayerBalloon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PlayerBalloon"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="musicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0

[connection signal="pressed" from="CenterContainer/bgBorderBottom/bgMusicOnOff/btnMusicOnOff" to="." method="_on_btnMusicOnOff_pressed"]
[connection signal="animation_finished" from="PlayerBalloon" to="PlayerBalloon" method="_on_PlayerBalloon_animation_finished"]
